# osmium

./: .gitignore  osmium.cabal  plans.md
src/: .Lib.hs.swp  Lib.hs  Lib.hs~
