name:                osmium
version:             0.1.0.0
synopsis:            An implementation of pattern-independent structuring of CFGs
description:         Please see README.md
homepage:            https://github.com/ibabushkin/osmium
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           2016 Inokentiy Babushkin
category:            Decompiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       fgl >= 5.5
  default-language:    Haskell2010


--executable osmium-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , osmium
--  default-language:    Haskell2010

test-suite osmium-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , osmium
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibabushkin/osmium
